<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OtpFragment">

    <!-- TODO: Update blank fragment layout -->
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textAlignment="center"
                    android:id="@+id/sms_desc"
                    android:text="@string/sms_desc" />

                <android.support.v4.widget.ContentLoadingProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="?android:attr/progressBarStyle"
                    android:id="@+id/otploading"
                    android:layout_margin="60dp"
                    android:layout_gravity="center"
                    android:visibility="visible"/>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true">

                    <TextView
                        android:id="@+id/tvText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/circle_drawable"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:gravity="center"
                        android:padding="2dp"
                        android:text="@string/or"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="16dp"
                        android:layout_toLeftOf="@id/tvText"
                        android:background="#FF0000"
                        />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="16dp"
                        android:layout_toRightOf="@id/tvText"
                        android:background="#FF0000"
                        />

                </RelativeLayout>


                <!--<View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="100dp"
                    android:background="#c0c0c0" />-->

                <!--<TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/or"/>-->

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_gravity="center"
                    android:text="@string/otp_manual_desc"/>

                <EditText
                    android:id="@+id/otptext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:inputType="number"
                    android:textAlignment="center"
                    android:hint="@string/otp"
                    android:ems="8"
                    android:drawableBottom="@android:color/holo_orange_light"
                    android:layout_margin="10dp"/>

                <Button
                    android:id="@+id/verify_otp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/holo_orange_light"
                    android:layout_margin="10dp"
                    android:text="@string/verify"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/id_resend"
                    android:text="@string/resend"
                    android:textColor="@drawable/resend_selector"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:textAlignment="center"/>

            </LinearLayout>
        </ScrollView>
    </android.support.v7.widget.CardView>


</FrameLayout>